force-app/main/default/objects/ApplicationTimeline.object
<CustomObject>
    <!-- CEQ Standard Entity 6: Case Events
         These custom fields extend the PSS standard ApplicationTimeline object
         (PSS Developer Guide p.85) for NEPA milestone tracking.
         ApplicationTimeline is natively linked to IndividualApplication.
         Do NOT add actionOverrides or object-level metadata here; those are
         defined in the base PSS package. Only custom fields are declared. -->
    <fields>
        <fullName>nepa_event_type__c</fullName>
        <description>NEPA event classification per CEQ standard Entity 6 Event Type property.</description>
        <inlineHelpText>Type of NEPA milestone this case event represents.</inlineHelpText>
        <label>NEPA Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOI</fullName>
                </value>
                <value>
                    <fullName>Scoping Open</fullName>
                </value>
                <value>
                    <fullName>Scoping Complete</fullName>
                </value>
                <value>
                    <fullName>Draft EIS Published</fullName>
                </value>
                <value>
                    <fullName>Comment Period Open</fullName>
                </value>
                <value>
                    <fullName>Comment Period Closed</fullName>
                </value>
                <value>
                    <fullName>Final EIS Published</fullName>
                </value>
                <value>
                    <fullName>ROD Issued</fullName>
                </value>
                <value>
                    <fullName>EA Initiated</fullName>
                </value>
                <value>
                    <fullName>FONSI Issued</fullName>
                </value>
                <value>
                    <fullName>CE Determination</fullName>
                </value>
                <value>
                    <fullName>Permit Issued</fullName>
                </value>
                <value>
                    <fullName>Process Paused</fullName>
                </value>
                <value>
                    <fullName>Process Cancelled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_event_description__c</fullName>
        <description>Description of this case event.</description>
        <inlineHelpText>Description of this case event milestone.</inlineHelpText>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_source__c</fullName>
        <description>Identifies the system or process that created this event (e.g., CE Screener, Timeline Risk Assessor), or a URL reference for manually created events.</description>
        <inlineHelpText>System name or URL identifying the source of this case event.</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_tier__c</fullName>
        <description>Optional event hierarchy tier (e.g., Tier 1 NOI, Tier 2 Scoping Complete).</description>
        <inlineHelpText>Optional hierarchy tier for this event (e.g., Tier 1, Tier 2).</inlineHelpText>
        <label>Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_status__c</fullName>
        <description>Status of this case event.</description>
        <inlineHelpText>Current status of this case event.</inlineHelpText>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_outcome__c</fullName>
        <description>Result or action taken for this case event.</description>
        <inlineHelpText>Result or action taken as a result of this milestone.</inlineHelpText>
        <label>Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_assigned_entity__c</fullName>
        <description>Responsible individual or agency assigned to this case event.</description>
        <inlineHelpText>Responsible individual or agency for this milestone.</inlineHelpText>
        <label>Assigned Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_following_segment__c</fullName>
        <description>Name of the process segment that follows this event (e.g., if this is "start of scoping" the next segment is "scoping").</description>
        <inlineHelpText>Name of the process segment that follows this event.</inlineHelpText>
        <label>Following Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_public_access__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this case event can be displayed publicly.</description>
        <inlineHelpText>Check if this milestone is publicly visible.</inlineHelpText>
        <label>Public Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_start_date__c</fullName>
        <description>Date this NEPA milestone event started. Maps to CEQ Entity 6 Start Date property.</description>
        <inlineHelpText>Date this milestone event started.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_end_date__c</fullName>
        <description>Date this NEPA milestone event concluded. Maps to CEQ Entity 6 End Date property.</description>
        <inlineHelpText>Date this milestone event concluded.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_related_process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the IndividualApplication (CEQ Process) this case event belongs to. Provides the NEPA process relationship where the PSS native IndividualApplicationId is not available in this org configuration.</description>
        <inlineHelpText>The NEPA process this case event milestone belongs to.</inlineHelpText>
        <label>Related Process</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Case Events</relationshipLabel>
        <relationshipName>Case_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nepa_parent_case_event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the parent case event, if this is a sub-event.</description>
        <inlineHelpText>Parent case event (for hierarchical milestone tracking).</inlineHelpText>
        <label>Parent Case Event</label>
        <referenceTo>ApplicationTimeline</referenceTo>
        <relationshipLabel>Child Case Events</relationshipLabel>
        <relationshipName>Child_Case_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nepa_related_engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a related public engagement event, if applicable.</description>
        <inlineHelpText>Related public engagement event for this milestone (e.g., scoping meeting tied to scoping open event).</inlineHelpText>
        <label>Related Engagement Event</label>
        <referenceTo>nepa_engagement__c</referenceTo>
        <relationshipLabel>Related Case Events</relationshipLabel>
        <relationshipName>Related_Case_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <!-- Provenance fields (CEQ Standard v1.2 - required on all entities) -->
    <fields>
        <fullName>nepa_data_record_version__c</fullName>
        <description>The version of the record, for tracking updates or changes to the data.</description>
        <inlineHelpText>Version of this record for data exchange tracking.</inlineHelpText>
        <label>Data Record Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_agency__c</fullName>
        <description>The name of the agency or organization that provided the data.</description>
        <inlineHelpText>Agency or organization that provided this data.</inlineHelpText>
        <label>Data Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_system__c</fullName>
        <description>The system or database where the data originally came from.</description>
        <inlineHelpText>Source system or database for this record.</inlineHelpText>
        <label>Data Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_record_owner_agency__c</fullName>
        <description>The agency responsible for maintaining or owning this record.</description>
        <inlineHelpText>Agency responsible for owning and maintaining this record.</inlineHelpText>
        <label>Record Owner Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_retrieved_timestamp__c</fullName>
        <description>The date and time when this record was retrieved from its source.</description>
        <inlineHelpText>Date and time this record was retrieved from its source system.</inlineHelpText>
        <label>Retrieved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nepa_other__c</fullName>
        <description>Extension bag for agency-specific or non-standard properties. Stores arbitrary JSON for interoperability with systems that require fields beyond the CEQ standard schema. Maps to the CEQ standard case_event.other (jsonb) property.</description>
        <inlineHelpText>JSON extension bag for additional properties not covered by the standard schema.</inlineHelpText>
        <label>Other (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>