force-app/main/default/objects/ApplicationTimeline/fields/nepa_completed_date__c.field-meta.xml
<CustomField>
    <fullName>nepa_completed_date__c</fullName>
    <description>Actual completion date for this OFD milestone. Populated when milestone status transitions to Completed. Used to calculate schedule variance against nepa_target_date__c.</description>
    <inlineHelpText>Actual date this OFD milestone was completed.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>