force-app/main/default/objects/ApplicationTimeline/fields/nepa_ofd_track__c.field-meta.xml
<CustomField>
    <fullName>nepa_ofd_track__c</fullName>
    <description>One Federal Decision track classification for this timeline event. Used to filter the OFD coordination dashboard by track type. NEPA_Lead = lead agency milestone; Agency_Consultation = cooperating agency coordination checkpoint; Permit_Milestone = dependent permit milestone (ESA 7, Section 404, Section 106); Joint_ROD = joint record of decision target. Blank = standard NEPA process event not part of OFD coordination.</description>
    <label>OFD Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEPA_Lead</fullName>
                <label>NEPA Lead</label>
            </value>
            <value>
                <fullName>Agency_Consultation</fullName>
                <label>Agency Consultation</label>
            </value>
            <value>
                <fullName>Permit_Milestone</fullName>
                <label>Permit Milestone</label>
            </value>
            <value>
                <fullName>Joint_ROD</fullName>
                <label>Joint ROD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>