force-app/main/default/objects/ApplicationTimeline/fields/nepa_target_date__c.field-meta.xml
<CustomField>
    <fullName>nepa_target_date__c</fullName>
    <description>Target completion date for this OFD milestone. Used by the OFD Coordination Tracker to track E.O. 13807 master schedule milestones against planned dates.</description>
    <inlineHelpText>Target date for this OFD coordination milestone.</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>